Use Android callback API to obtain cellular signal strength

Move cellular signal strength methods to a class. Also, use the
PhoneStateListener to listen to the changes in the signal strength.

BUG=703740
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2763853002
Cr-Commit-Position: refs/heads/master@{#482981}

Former-commit-id: de702d52aea0e1daae4a827d0eb3fe3d4d477b68