net/android/cellular_signal_strength.h
@@ -9,7 +9,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <jni.h>
 #include <stdint.h>
 
-#include "base/compiler_specific.h"
+#include "base/optional.h"
 #include "net/base/net_export.h"
 
 namespace net {
@@ -18,18 +18,10 @@ namespace android {
 
 namespace cellular_signal_strength {
 
-// Returns true if the signal strength (in dbM) of the currently registered
-// cellular connection is available, and sets |*signal_strength_dbm| to that
-// value.
-NET_EXPORT bool GetSignalStrengthDbm(int32_t* signal_strength_dbm)
-    WARN_UNUSED_RESULT;
-
-// Returns true if the signal strength level (between 0 and 4, both inclusive)
-// of the currently registered cellular connection is available, and sets
-// |*signal_strength_level| to that value with lower value indicating lower
-// signal strength.
-NET_EXPORT bool GetSignalStrengthLevel(int32_t* signal_strength_level)
-    WARN_UNUSED_RESULT;
+// Returns the signal strength level (between 0 and 4, both inclusive) of the
+// currently registered cellular connection. If the value is unavailable, an
+// empty value is returned.
+NET_EXPORT_PRIVATE base::Optional<int32_t> GetSignalStrengthLevel();
 
 }  // namespace cellular_signal_strength
 
